# droid

./: Cargo.toml  README.md
demo-files/: quicknav.toml  quicknav.yaml
src/: main.rs
src/commands/: install.rs  mod.rs  uninstall.rs
src/utils/: build.rs  chroot.rs  download.rs  mod.rs  parse.rs
