[package]
name = "droid"
version = "0.1.0"
authors = ["MrDogeBro <MrDogeBro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
indicatif = "0.16.0"
colored = "2"
git2 = "0.13"
glob = "0.3.0"

[dependencies.uuid]
version = "0.8"
features = ["v4"]
